tests/paczka1/small_fuzzy/39588081.err
Error in line 4: t9navwXDi S382 14,4
Error in line 7: xpX 717 302,8
Error in line 6: xpX A717 67,3
